# ComfyUI-EsesImageEffectCurves

./: __init__.py  image_effect_curves.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
js/: image_effect_curves.js
presets/: cold.json  low contrast.json  metallic.json  painterly.json
